fixed nav mobile spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,7 @@ html {
 }
 @media (max-width: 495px) {
   .intro {
-    margin-top: 20px;
+    margin-top: 15%;
   }
 }
 
